# sophys-cli-core

./: .gitignore  README.md  cliff.toml  pyproject.toml
.github/workflows/: testing.yml
src/sophys/cli/: __init__.py  __main__.py  data_source.py  http_utils.py  persistent_metadata.py  pre_execution.py
src/sophys/cli/core/: __init__.py  __main__.py  _pre_execution.py  base_configuration.py  data_source.py  http_utils.py  persistent_metadata.py  pre_execution.py
src/sophys/cli/core/magics/: __init__.py  plan_magics.py  sample_plan_definitions.py  tools_magics.py
src/sophys/cli/core/test_utils/data/: http.py
src/sophys/cli/core/test_utils/fixtures/: http_mock.py  kernel_mock.py
src/sophys/cli/extensions/: __init__.py  common_ext.py  plan_magics.py  test_ext.py  tools_magics.py
tests/: conftest.py  test_base_configuration.py  test_data_source.py  test_entrypoint.py  test_environment_variables.py  test_http_magics.py  test_http_utils.py
tests/mock_data/: __init__.py  http.py
