[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sophys-cli-core"
authors = [
  { name="Sofia Ferreira", email="sofia.ferreira@lnls.br" },
]
description = "Command-line support for sophys."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
  "setuptools",
  "ipython",
  "kafka-python-ng",
  "bluesky[plotting]",
  "ophyd",
  "sophys-common>=3.1.0",
  "kafka-bluesky-live",
  "databroker<2.0.0",
  "bluesky-queueserver-api",
  "pydantic",
  "pickleshare",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "fakeredis",
  "respx",
]
all = [
  "sophys-cli-core[dev]"
]

[project.scripts]
sophys-cli = "sophys.cli.core.__main__:entrypoint"

[project.entry-points.pytest11]
sophys-cli-kernel-mock = "sophys.cli.core.test_utils.fixtures.kernel_mock"
sophys-cli-http-mock = "sophys.cli.core.test_utils.fixtures.http_mock"

[tool.setuptools_scm]
version_file = "src/sophys/cli/core/__version__.py"

[tool.setuptools.packages.find]
where = ["src"]

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#flake8
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E704"]
